--- a/index.html
+++ b/index.html
@@ -1,23 +1,51 @@
 <!DOCTYPE html>
 <html lang="cs-CZ">
     <head>
+        <!-- Nastavení kódování a viewportu pro responzivní design -->
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Interiérové dřevo</title>
+
+        <!-- Titulek stránky, klíčová fráze pro vyhledávače a popis obsahu stránky -->
+        <title>Interiérové dřevo - Tvrdé Bukové Dřevo pro Váš Domov | Cena, Výhody, Design</title>
+        <meta name="description" content="Prodej tvrdého bukového dřeva s vysokou výhřevností, designovým vzhledem a šetrným vlivem na interiér. Cena, výhody, design a možnosti dopravy.">
+        <meta name="keywords" content="tvrdé bukové dřevo, výhřevnost, design, cena, doprava">
+
+        <!-- Open Graph meta tagy pro sdílení na sociálních sítích -->
+        <meta property="og:title" content="Interiérové dřevo - Tvrdé Bukové Dřevo pro Váš Domov | Cena, Výhody, Design">
+        <meta property="og:description" content="Prodej tvrdého bukového dřeva s vysokou výhřevností, designovým vzhledem a šetrným vlivem na interiér. Cena, výhody, design a možnosti dopravy.">
+        <meta property="og:image" content="URL_TO_YOUR_FEATURED_IMAGE">
+        <meta property="og:url" content="YOUR_WEBSITE_URL">
+
+        <!-- Twitter Card meta tagy pro sdílení na Twitteru -->
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:title" content="Interiérové dřevo - Tvrdé Bukové Dřevo pro Váš Domov | Cena, Výhody, Design">
+        <meta name="twitter:description" content="Prodej tvrdého bukového dřeva s vysokou výhřevností, designovým vzhledem a šetrným vlivem na interiér. Cena, výhody, design a možnosti dopravy.">
+        <meta name="twitter:image" content="URL_TO_YOUR_FEATURED_IMAGE">
+
+        <!-- Ikona stránky (favicon) -->
+        <link rel="icon" href="URL_TO_YOUR_FAVICON" type="image/png">
+
+        <!-- Odkazy na externí styly (Bootstrap, vlastní styl, normalize) -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     </head>
     <body>
+        <!-- Hlavní kontejner stránky -->
         <div class="my-container">
+            <!-- Hlavička stránky -->
             <header>
+                <!-- Vnitřní struktura hlavičky s logem a navigací -->
                 <div class="header">
                     <div class="left-column-header">
+                        <!-- Logo stránky s odkazem na úvodní stránku -->
                         <div class="logo"><a href="#"><img src="img/ID_logo_white.svg" alt></a></div>
                     </div>
                     <div class="right-column-header">
+                        <!-- Navigační menu v horní části stránky -->
                         <nav class="navbar navbar-expand">
                             <ul>
+                                <!-- Dropdown odkaz pro sekci "Info" s podsekce pro jednotlivé položky -->
                                 <li class="dropdown" id="toggleButton">
                                     <a href="#" id="dropdownToggle">Info</a>
                                     <div class="dropdown-content">
@@ -29,18 +57,22 @@
                                         <a href="#">Kontakt</a>
                                     </div>
                                 </li>
-                                <!-- Přidej další odkazy podle potřeby -->
+                                <!-- Případné další odkazy zde -->
                             </ul>
                         </nav>
                     </div>
                 </div>
             </header>
 
+            <!-- Hlavní obsah stránky -->
             <main>
+                <!-- Sekce obsahu s třemi sloupci (levý, střední, pravý) -->
                 <section class="content">
+                    <!-- Levý sloupec s textem a kontaktními informacemi -->
                     <div class="left-column">
                         <p><span class="bold">Prodáváme tvrdé bukové dřevo,</span> které má vysokou výhřevnost, je designové a&nbsp;neznečišťuje interiér kůrou ani hmyzem.</p>
                         <div>
+                            <!-- Kontaktní informace s telefonním číslem a e-mailem -->
                             <p id="mb-contact">
                                 <a href="tel:00420608144319">+420&nbsp;608&nbsp;144&nbsp;319</a>
                                 <br />
@@ -48,25 +80,32 @@
                             </p>
                         </div>
                     </div>
+                    <!-- Střední sloupec s obrázkem č. 1 -->
                     <div class="middle-column">
                         <img src="img/Foto_1@2x.png" alt="Popis obrázku">
                     </div>
+                    <!-- Pravý sloupec s obrázkem č. 2 a cenou -->
                     <div class="right-column">
                         <img src="img/Foto_2@2x.jpg" alt="Popis druhého obrázku">
                         <p><span class="bold">Cena 2&nbsp;890&nbsp;Kč</span> (včetně&nbsp;DPH) <br />Doprava vlastní nebo dle domluvy.</p>
                     </div>
                 </section>
+                <!-- Prvek pro správné zarovnání obsahu -->
                 <div class="push"></div>
             </main>
 
+            <!-- Patička stránky -->
             <footer>
+                <!-- Dvě loga v patičce stránky, zarovnaná do dvou sloupců -->
                 <div class="d-flex justify-content-between">
                     <div class="logo-footer col-6"><a href="#"><img src="img/matfix_logo.svg" alt></a></div>
                     <div class="logo-footer col-6 text-end"><a href="#"><img class="justify-content-end" src="img/tvorba_paticka.svg" alt></a></div>
                 </div>
             </footer>
         </div>
+        <!-- Vložený JavaScript pro funkcionalitu stránky -->
         <script src="script.js"></script>
+        <!-- Vložený Bootstrap JavaScript pro interaktivitu a responzivní design -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     </body>
 </html>
