--- a/index.html
+++ b/index.html
@@ -70,8 +70,10 @@
                 <section class="content">
                     <!-- Levý sloupec s textem a kontaktními informacemi -->
                     <div class="left-column">
-                        <p><span class="bold">Prodáváme tvrdé bukové dřevo,</span> které má vysokou výhřevnost, je designové a&nbsp;neznečišťuje interiér kůrou ani hmyzem.</p>
                         <div>
+                            <p><span class="bold">Prodáváme tvrdé bukové dřevo,</span> které má vysokou výhřevnost, je designové a&nbsp;neznečišťuje interiér kůrou ani hmyzem.</p>
+                        </div>
+                        <div class="dt-hide">
                             <!-- Kontaktní informace s telefonním číslem a e-mailem -->
                             <p id="mb-contact">
                                 <a href="tel:00420608144319">+420&nbsp;608&nbsp;144&nbsp;319</a>
@@ -86,8 +88,34 @@
                     </div>
                     <!-- Pravý sloupec s obrázkem č. 2 a cenou -->
                     <div class="right-column">
-                        <img src="img/Foto_2@2x.jpg" alt="Popis druhého obrázku">
-                        <p><span class="bold">Cena 2&nbsp;890&nbsp;Kč</span> (včetně&nbsp;DPH) <br />Doprava vlastní nebo dle domluvy.</p>
+                        <div>
+                            <img src="img/Foto_2@2x.jpg" alt="Popis druhého obrázku">
+                        </div>
+                        <div class="dt-hide">
+                            <p><span class="bold">Cena 2&nbsp;890&nbsp;Kč</span> (včetně&nbsp;DPH) <br />Doprava vlastní nebo dle domluvy.</p>
+                        </div>
+                    </div>
+                </section>
+                <section class="content-dt mb-hide dt-show">
+                    <!-- Levý sloupec s textem a kontaktními informacemi -->
+                    <div class="left-column-dt">
+                        <div>
+                            <!-- Kontaktní informace s telefonním číslem a e-mailem -->
+                            <p id="mb-contact">
+                                <a href="tel:00420608144319">+420&nbsp;608&nbsp;144&nbsp;319</a>
+                                <br />
+                                <a href="mailto:info@interierovedrevo.cz">info@interierovedrevo.cz</a>
+                            </p>
+                        </div>
+                    </div>
+                    <!-- Střední sloupec s obrázkem č. 1 -->
+                    <div class="middle-column-dt">
+                    </div>
+                    <!-- Pravý sloupec s obrázkem č. 2 a cenou -->
+                    <div class="right-column">
+                        <div>
+                            <p><span class="bold">Cena 2&nbsp;890&nbsp;Kč</span> (včetně&nbsp;DPH) <br />Doprava vlastní nebo dle domluvy.</p>
+                        </div>
                     </div>
                 </section>
                 <!-- Prvek pro správné zarovnání obsahu -->
