--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!-- Titulek stránky, klíčová fráze pro vyhledávače a popis obsahu stránky -->
-        <title>Interiérové dřevo - Tvrdé Bukové Dřevo pro Váš Domov | Cena, Výhody, Design</title>
+        <title>Interiérové dřevo - Tvrdé bukové dřevo pro Váš domov | Cena, Výhody, Design</title>
         <meta name="description" content="Prodej tvrdého bukového dřeva s vysokou výhřevností, designovým vzhledem a šetrným vlivem na interiér. Cena, výhody, design a možnosti dopravy.">
         <meta name="keywords" content="tvrdé bukové dřevo, výhřevnost, design, cena, doprava">
 
